--- a/Project_1/css/media.css
+++ b/Project_1/css/media.css
@@ -952,32 +952,35 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 100vw;
-        height: 100vh;
+        /*width: 100vw;
+        height: 100vh;*/
+        width: 100%;
+        height: 100%;
         font-size: 2rem;
+        font-weight: bold;
         letter-spacing: 0px;
         overflow: hidden;
         /*하위메뉴감추기*/
-        transition: height .4s ease-out;
+        /*transition: height .4s ease-out;*/
         /*outline: 3px dotted green;*/
         background-color: rgba(0, 0, 0, 0.57);
     }
 
     /*GNB메뉴 마우스 오버시 높이값변경*/
-    .gnb:hover {
+    /*.gnb:hover {
         height: 150px;
-    }
+    }*/
 
     /*GNB메뉴 사이간격*/
     .gnb > li {
         position: relative;
         /*부모자격*/
-        width: 100%;
+        width: 40%;
         padding: 0;
         padding-top: 5%;
         font-weight: bolder;
-        color: #151515;
-        line-height: 10rem;
+        color: #fff;
+        line-height: 1rem;
         /* outline: 1px solid red; */
         text-align: center;
     }
